--- a/styles/customerDashboard-header.css
+++ b/styles/customerDashboard-header.css
@@ -27,7 +27,17 @@ header {
   justify-content: space-between;
   align-items: center;
 }
-
+.user-container-mobile{
+  cursor: pointer;
+  border: 3px solid orange;
+  border-radius: 10px;
+  font-size: medium;
+  padding: 10px;
+  color: #f0f0f8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .header-right a {
   padding: 2px 15px;
   margin-right: 10px;
@@ -43,9 +53,6 @@ header {
   justify-content: center;
   align-items: center;
 }
-.user-container-mobile{
-  display: none;
-}
 .header-right a:hover {
   transform: scale(1.010);
   border-bottom: 3px solid rgba(255, 166, 0, 0.913);
@@ -58,51 +65,56 @@ header {
 }
 
 /* Media query for screens smaller than 620px */
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 1037px) {
   header {
     padding: 5px;
     gap: 10px;
-    width: 100%;
     flex-direction: column;
   }
   .header-left{
     display: flex;
-    width: 90%;
-    height: 50px;
-    justify-content: space-between;
+    justify-content: center;
   }
   .header-left-logo-container img{
     width: 100%;
     height: 100%;
   }
-  .header-right{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 5px;
-  }
-  .user-container{
-    display: none;
-  }
   .user-container-mobile{
-    padding: 5px;
-    border: 1px solid orange;
+    border: 2px solid orange;
     border-radius: 10px;
-    font-size: small;
+    font-size: medium;
+    padding: 10px;
     color: #f0f0f8;
     display: flex;
     justify-content: center;
     align-items: center;
   }
+  .header-right{
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 5px;
+  }
   .header-right a {
     font-size: medium;
     margin: 0;
     padding: 5px 10px;
-
   }
 }
 @media screen and (max-width:695px){
   .header-right a {
+    font-size: small;
+  }
+}
+@media screen and (max-width:590px){
+  .header-right{
+    flex-wrap: wrap;
+  }
+
+  .user-container-mobile{
+    padding: 6px;
+    border: 2px solid orange;
     font-size: small;
   }
 }
