--- a/styles/customerDashboard/hotel-images.css
+++ b/styles/customerDashboard/hotel-images.css
@@ -1,28 +1,45 @@
 
 .hotel-con {
   position: relative;
-  height: 70vh;
+  height: fit-content;
   overflow: hidden;
   margin: auto;
   display: flex;
+  width: 100%;
   justify-content: center;
+
   align-items: center;
 }
 .desc-con {
   display: flex;
-  justify-content: space-between;
+  
+  justify-content: space-evenly;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   padding: 15px;
   height: auto;
   position: relative;
-  top: 55%;
+  top: 450px;
   color: #dedef3;
 }
+.slider__content {
+  position: relative;
+  text-align: center;
+  top: 470px;
+  width: auto;
+  transform: translateY(-50%);
+  color: white;
+  border: 5px solid transparent;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  padding-left: 3%;
+  height: auto;
+  transition: opacity 450ms;
+}
 .hotel-desc {
-  font-size: 20px;
-  font-weight: 500;
-  height: 100%;
+  width: 50%;
+  font-size: 23px;
+  font-weight: 300;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -74,7 +91,7 @@
 }
 .slider__inner {
   width: 100%;
-
+  border-radius: 10px;
   height: 100%;
   position: absolute;
   top: 0;
@@ -82,7 +99,6 @@
   background-size: auto 133.3333%;
   background-position: center;
   background-repeat: none;
-
   transform: scale(0.75);
   transition: transform 450ms cubic-bezier(0.785, 0.135, 0.15, 0.86),
     box-shadow 450ms cubic-bezier(0.785, 0.135, 0.15, 0.86),
@@ -91,23 +107,10 @@
   box-shadow: 0 3vh 3vh rgba(0, 0, 0, 0);
   box-sizing: border-box;
 }
-.slider__content {
-  position: relative;
-  text-align: center;
-  top: 60%;
-  width: auto;
-  transform: translateY(-50%);
-  color: white;
-  border: 5px solid transparent;
-  background-color: rgba(0, 0, 0, 0.5);
-  opacity: 0;
-  padding-left: 3%;
-  height: auto;
-  transition: opacity 450ms;
-}
+
 .slider__content h1 {
   margin-top: 10px;
-  font-size: 45px;
+  font-size: 40px;
   margin-bottom: 0.75vh;
   pointer-events: none;
   color: orange;
@@ -243,5 +246,28 @@
 .slider__slide:nth-child(5) .slider__back,
 .slider__slide:nth-child(5) .slider__inner {
   background-image: url(https://images.unsplash.com/photo-1611892440504-42a792e24d32?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+}
+
+
+@media screen and (max-width: 1028px){
+  .hotel-desc{
+    font-size: large;
+  }
+  .features{
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 682px){
+  .hotel-desc{
+    font-size: medium;
+  }
+  .features{
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 454px){
+  .hotel-desc{
+    display: none;
+  }
 }
 
