--- a/styles/login.css
+++ b/styles/login.css
@@ -1,19 +1,36 @@
 /* main */
 .wrapper {
-  background-color: #999;
-  height: 100%;
-  display: grid;
-  place-items: center;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #001403;
   background-image: url("data:image/svg+xml,%3Csvg width='180' height='180' viewBox='0 0 180 180' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M81.28 88H68.413l19.298 19.298L81.28 88zm2.107 0h13.226L90 107.838 83.387 88zm15.334 0h12.866l-19.298 19.298L98.72 88zm-32.927-2.207L73.586 78h32.827l.5.5 7.294 7.293L115.414 87l-24.707 24.707-.707.707L64.586 87l1.207-1.207zm2.62.207L74 80.414 79.586 86H68.414zm16 0L90 80.414 95.586 86H84.414zm16 0L106 80.414 111.586 86h-11.172zm-8-6h11.173L98 85.586 92.414 80zM82 85.586L87.586 80H76.414L82 85.586zM17.414 0L.707 16.707 0 17.414V0h17.414zM4.28 0L0 12.838V0h4.28zm10.306 0L2.288 12.298 6.388 0h8.198zM180 17.414L162.586 0H180v17.414zM165.414 0l12.298 12.298L173.612 0h-8.198zM180 12.838L175.72 0H180v12.838zM0 163h16.413l.5.5 7.294 7.293L25.414 172l-8 8H0v-17zm0 10h6.613l-2.334 7H0v-7zm14.586 7l7-7H8.72l-2.333 7h8.2zM0 165.414L5.586 171H0v-5.586zM10.414 171L16 165.414 21.586 171H10.414zm-8-6h11.172L8 170.586 2.414 165zM180 163h-16.413l-7.794 7.793-1.207 1.207 8 8H180v-17zm-14.586 17l-7-7h12.865l2.333 7h-8.2zM180 173h-6.613l2.334 7H180v-7zm-21.586-2l5.586-5.586 5.586 5.586h-11.172zM180 165.414L174.414 171H180v-5.586zm-8 5.172l5.586-5.586h-11.172l5.586 5.586zM152.933 25.653l1.414 1.414-33.94 33.942-1.416-1.416 33.943-33.94zm1.414 127.28l-1.414 1.414-33.942-33.94 1.416-1.416 33.94 33.943zm-127.28 1.414l-1.414-1.414 33.94-33.942 1.416 1.416-33.943 33.94zm-1.414-127.28l1.414-1.414 33.942 33.94-1.416 1.416-33.94-33.943zM0 85c2.21 0 4 1.79 4 4s-1.79 4-4 4v-8zm180 0c-2.21 0-4 1.79-4 4s1.79 4 4 4v-8zM94 0c0 2.21-1.79 4-4 4s-4-1.79-4-4h8zm0 180c0-2.21-1.79-4-4-4s-4 1.79-4 4h8z' fill='%234e4d1b' fill-opacity='0.18' fill-rule='evenodd'/%3E%3C/svg%3E");
+  animation: moveBackground 15s linear infinite;
+}
+@keyframes moveBackground {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 0 100%;
+  }
+}
+.container-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 70%;
 }
 .container {
-  width: 50%;
+  width: 60%;
   display: flex;
-  height: 60vh;
+  height: 60%;
   border-radius: 8px;
   color: #111;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+    rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 /* left side */
 .left-side {
@@ -27,27 +44,18 @@
   width: 100%;
   height: 100%;
 }
-.img-wrapper video {
+.img-wrapper img {
   width: 100%;
   object-fit: cover;
   height: 100%;
 }
-.heading-container {
-  padding-left: 30px;
-  padding-right: 30px;
-  text-align: center;
-}
-.description {
-  padding-bottom: 20px;
-  font-weight: 300;
-}
 /* right side */
 .right-side {
+  width: 50%;
   border-bottom-right-radius: inherit;
   border-top-right-radius: inherit;
   color: #111;
   display: flex;
-  width: 50%;
   background-color: #f0f0f8;
   justify-content: center;
   align-items: center;
@@ -55,15 +63,23 @@
   animation: fade-in-fwd 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 .form-img {
-  display: grid;
-  place-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.form-img img {
+  max-width: 100%;
+  max-height: 100%;
 }
 .login-form {
-  width: 65%;
+  width: 75%;
+  display: flex;
+  height: 80%;
+  flex-direction: column;
 }
 
 .login-form h1 {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 400;
   margin-bottom: 10px;
   text-align: center;
@@ -74,7 +90,7 @@
   display: flex;
   flex-direction: column;
 }
-.password-group{
+.password-group {
   position: relative;
 }
 .toggle-password {
@@ -84,8 +100,7 @@
   transition: all 0.15s ease;
   cursor: pointer;
 }
-/* TODO: MAKE THIS RESPONSIVE AND FIX OTHER ALERT ON OTHER PAGE */
-.toggle-password:hover{
+.toggle-password:hover {
   color: orange;
 }
 
@@ -103,6 +118,64 @@ option {
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
+}
+.test-popup {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 20%;
+  background-color: #d3d3f3;
+  border-radius: 8px;
+  border: none;
+  color: #f0f0f8;
+  padding: 8px;
+  z-index: 999;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+    rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  padding: 20px;
+}
+
+.text-area-acc {
+  padding: 0;
+  font-weight: 500;
+  font-size: medium;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+.custo {
+  border: 1px solid #111;
+  border-radius: 8px;
+}
+.text-area-acc p {
+  text-align: start;
+  margin-left: 15px;
+}
+.test div,
+.test h3 {
+  text-align: center;
+  padding: 10px;
+  font-weight: 500;
+  color: #111;
+}
+.back-con {
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.back-con a {
+  color: #111;
+  transition: all 0.15s ease;
+}
+#acc {
+  font-size: smaller;
+  cursor: pointer;
+}
+.back-con a:hover {
+  color: orange;
 }
 
 /* form animation */
@@ -159,15 +232,15 @@ option {
 .login-button {
   width: 40%;
   border-radius: 50px;
-  margin-bottom: 15px;
   padding: 10px;
   color: #fff;
   border: none;
+  background-color: orange;
   font-size: medium;
   cursor: pointer;
 }
 .login-button:hover {
-  background-color: orange;
+  background-color: rgb(233, 154, 6);
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
     rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   transition: background-color 0.15s ease, box-shadow 0.15s ease;
@@ -179,41 +252,80 @@ option {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 35%;
-  background-color: rgb(54, 54, 52);
-  border-radius: 10px;
+  width: 20%;
+  background-color: #d3d3f3;
+  border-radius: 8px;
   border: none;
   color: #f0f0f8;
   padding: 20px;
   z-index: 999;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+    rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  padding: 20px;
 }
 
 .close-btn {
   position: absolute;
   top: 10px;
   right: 10px;
-  font-size: 30px;
-  line-height: 1;
-  padding: 4px 8px;
-  margin: 0;
-  border: none;
+  font-size: 24px;
   background: none;
   cursor: pointer;
-  color: #999;
+  color: orangered;
 }
-/* animation for left side */
-/* ----------------------------------------------
- * Generated by Animista on 2024-5-12 20:2:25
- * Licensed under FreeBSD License.
- * See http://animista.net/license for more info. 
- * w: http://animista.net, t: @cssanimista
- * ---------------------------------------------- */
+.popup h2 {
+  margin-top: 0;
+  margin-bottom: 10px;
+  text-align: center;
+  font-size: 24px;
+  color: #111;
+}
 
-/**
- * ----------------------------------------
- * animation fade-in
- * ----------------------------------------
- */
+.form-group {
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+  color: #111;
+}
+
+input[type="text"],
+input[type="number"],
+input[type="email"],
+input[type="password"],
+select,
+textarea {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  color: #111;
+}
+
+.button-container {
+  display: grid;
+  margin-top: 10px;
+  place-items: center;
+}
+
+.reg-signup-btn {
+  background-color: orange;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.15s ease;
+}
+
+.reg-signup-btn:hover {
+  background-color: #f78702;
+}
+
 @-webkit-keyframes fade-in {
   0% {
     opacity: 0;
@@ -230,18 +342,7 @@ option {
     opacity: 1;
   }
 }
-/* ----------------------------------------------
- * Generated by Animista on 2024-5-12 20:6:47
- * Licensed under FreeBSD License.
- * See http://animista.net/license for more info. 
- * w: http://animista.net, t: @cssanimista
- * ---------------------------------------------- */
 
-/**
- * ----------------------------------------
- * animation fade-in-fwd
- * ----------------------------------------
- */
 @-webkit-keyframes fade-in-fwd {
   0% {
     -webkit-transform: translateZ(-80px);
@@ -267,63 +368,64 @@ option {
   }
 }
 
-@media only screen and (max-width: 840px) {
-  .logo-container {
-    margin: auto;
-    width: fit-content;
-  }
-  main {
-    margin-top: 40px;
+@media screen and (max-width: 1180px) {
+  .container {
+    width: 50%;
+    height: auto;
     flex-direction: column;
-    height: fit-content;
   }
   .left-side {
-    width: fit-content;
-    padding: 10px;
-  }
-  .image-container {
+    border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
     width: 100%;
-    height: 80%;
   }
-  .tagline {
-    font-size: x-large;
-  }
-  .description {
-    font-size: small;
-    text-align: center;
+  .video-wrapper video {
+    height: 100%;
+    width: 100%;
+    border-radius: 8px;
   }
   .right-side {
     width: 100%;
+    border-radius: 8px;
   }
   .login-form {
-    width: 65%;
-    padding: 20px;
-    margin-bottom: 20px;
+    padding: 10px;
   }
-  .input-group {
-    padding: 0;
-  }
-  .login-form h1 {
-    font-size: large;
-  }
-  .input-group label {
-    font-size: small;
-  }
-  .input-group input {
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
-  .dont-have-acc-text,
-  .login-button {
-    font-size: small;
-  }
-  .signup-link {
-    font-size: small;
-  }
+}
+
+@media screen and (max-width: 747px) {
   .registration-popup {
+    width: 50%;
+  }
+  .test-popup {
+    width: 30%;
+  }
+}
+@media screen and (max-width: 573px) {
+  .container-wrap {
+    width: 100%;
+  }
+  .test-popup {
+    width: 50%;
+  }
+  .container {
+    width: 70%;
+  }
+  .form-img {
+    margin-top: 20px;
+    height: 70px;
+  }
+  .login-form {
     width: 80%;
   }
-  .signup-text {
-    font-size: x-large;
+  .login-form h1 {
+    font-size: medium;
+  }
+  .login-form label,
+  .dont-have-acc-text,
+  #signup-btn,
+  .login-button,
+  .back-txt {
+    font-size: small;
   }
 }
